# OpenSpace

./: .gitignore  LICENSE  README.md  README_CN.md  claude_code_best_practices_guide.md  cursor_config.json  etf_data.py  etf_summary.py  hot_news_report_2026-03-31.md  learnings_analysis_report.md  learnings_summary_report.md  mem0_local_mcp_deployment_guide.md  mem0_research_report.md  memory_monitor.py  memory_monitor_report.json  memory_monitor_report.md  memory_monitor_report.txt  memory_monitor_task.py  memory_scanner.py  openspace_config.json  openspace_config_isolated.json  pyproject.toml  qq_email_reader.py  requirements.txt  research_claude_code.md  research_kimi_code.md  research_opencode.md  research_pi_ai.md  research_qwen_code.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
gdpval_bench/: README.md  __init__.py  __main__.py  calc_subset_performance.py  config.json  requirements-eval.txt  run_benchmark.py  task_loader.py  tasks_50.json  tasks_50_full.jsonl  token_tracker.py
gdpval_bench/.openspace/: openspace.db
openspace/: .env.example  __init__.py  __main__.py  dashboard_server.py  mcp_server.py  tool_layer.py
openspace/agents/: __init__.py  base.py  grounding_agent.py
openspace/cloud/: __init__.py  auth.py  client.py  embedding.py  search.py
openspace/config/: README.md  __init__.py  config_agents.json  config_dev.json.example  config_grounding.json  config_mcp.json.example  config_security.json  constants.py  grounding.py  llm_defaults.py  loader.py  utils.py
openspace/host_detection/: __init__.py  nanobot.py  openclaw.py  resolver.py
openspace/host_skills/: README.md
openspace/llm/: __init__.py  client.py
openspace/local_server/: README.md  __init__.py  config.json  feature_checker.py  health_checker.py  main.py  requirements.txt  (+1 more)
scripts/: deploy-isolated.sh
showcase/: README.md
(+733 files in other folders)
